overflow fixes

--- a/letter.css
+++ b/letter.css
@@ -1,7 +1,12 @@
 #letter-wrapper {
-  display: block;
   position: relative;
   
+  width: 250px;
+  height: 250px;
+}
+
+.letter-ghost {
+  position: static;
   width: 250px;
   height: 250px;
 }
@@ -121,22 +126,6 @@
   opacity: 0.3;
 }
 
-.shadow {
-  position: absolute;
-  top: 200px;
-  left: 50%;
-  width: 400px;
-  height: 30px;
-  transition: 0.4s;
-  transform: translateX(-50%);
-  -webkit-transition: 0.4s;
-  -webkit-transform: translateX(-50%);
-  -moz-transition: 0.4s;
-  -moz-transform: translateX(-50%);
-  border-radius: 100%;
-  background: radial-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0));
-}
-
 .letter-image:hover .animated-mail {
   transform: translateY(50px);
   -webkit-transform: translateY(50px);
@@ -155,10 +144,6 @@
 
 .letter-image:hover .animated-mail .letter {
   height: 180px;
-}
-
-.letter-image:hover .shadow {
-  width: 250px;
 }
 
 .letter-invite {
