--- a/style.css
+++ b/style.css
@@ -5,14 +5,13 @@
 }
 
 body {
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow: auto;
 }
 
 body,
 html {
   margin: 0;
-  height: 100%;
+  min-height: 100vh;
 }
 
 #theme-switch-moon {
@@ -165,7 +164,7 @@ p {
   display: flex;
   flex-direction: column;
 
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 
   top: 0;
@@ -174,7 +173,7 @@ p {
   bottom: 0;
 
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
 
   padding: 0;
   margin: 0;
@@ -195,8 +194,10 @@ p {
 
   line-height: 34px;
 
-  width: 70%;
-  height: 12.5%;
+  width: 50%;
+  height: 7.5vh;
+  
+  min-height: 140px;
 
   padding: 0 15% 0 15%;
   margin-bottom: 3%;
@@ -264,15 +265,18 @@ p {
   text-align: center;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1000px) {
   #header {
+    height: 2.5vh;
+    min-height: 60px;
+
     width: 100%;
-    transition: .1;
+
+    padding: 0;
   }
 
   #content {
     width: 80%;
-    transition: .1;
   }
 
   #header-links {
@@ -281,6 +285,13 @@ p {
     transform: none;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  #header>.theme-switch-wrapper {
+    margin: 0;
+  }
+}
+
 
 #github-link {
   color: var(--link-color);
